--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+  - jekyll-remote-theme
+title: Brock O'Malley 499 ePortfolio
+description: Software engineer | Projects & Skills
 
